<resources>
    <string name="app_name">ShopManagement</string>
    <string name="lien">Lien</string>
    <string name="systemlogo">systemLogo</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Register here!</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="feedback_amp_support"><![CDATA[Feedback and Support]]></string>
    <string name="logout">Logout</string>
    <string name="terms_amp_condition"><![CDATA[Terms and Condition]]></string>
    <string name="feedbackEnter">Please enter your feedback</string>
    <string name="story">Use the form below to send us your comments or report any problems you may have experienced using Lien.</string>
    <string name="feedback_and_support">Feedback and Support</string>
    <string name="we_are_always_keen_in_learning_more_on_how_we_can_improve_our_application">We are always keen in learning more on how we can improve our application!</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="termsAndCondition">
Last updated [ 27/11/2020 ]\n\nPlease read these Terms and Conditions carefully before using
the application (the "Service") operated by the Lien team.
Your access to and use of the Service is conditioned on your acceptance of and compliance with
these terms. These terms apply to all visitors, users and others who access or use the service.\n\nIf you wish to purchase any product or service made available through the service,
you may be asked to supply certain information relevant to your purchase.
\n\nOur service allows you to save, link, store, share certain information,text or other material ("Content"). Unless otherwise indicated, the Application is our property and all source code, databases, functionality, software, website designs, audio, video, text, photographs, and graphics on the Application owned or controlled by us or licensed to us, and are protected by copyright and trademark laws\n\nWe respect the intellectual property rights of others. If you believe that any material available on or through the Application infringes upon any copyright you own or control, please immediately notify our company.\n\nWe reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a
revision in material is brought up, we will try to provide a notice prior to at least 30 days what constitutes a material change will be determined at our sole discretion. \n\nIf you have any questions about these Terms, please contact us.
    </string>
    <string name="settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="sale_reports">Sale Reports</string>
    <string name="stock">Stock</string>
    <string name="store">Store</string>
    <string name="transactions">Transactions</string>
    <string name="dashboard">Dashboard</string>
    <string name="products">Products</string>
    <string name="add_to_store">Add to Store</string>
    <string name="productname">ProductName</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="calculate_selling_price">Calculate Selling Price</string>
    <string name="unit_price_aed">Unit Price: AED</string>
    <string name="selling_price_per_unit_aed">Original Selling Price Per Unit: </string>
    <string name="set_discount">Promotional Discount (%):</string>
    <string name="product_tax_aed">Product Tax: AED</string>
    <string name="total_marketing_cost_aed">Total Marketing Cost: AED</string>
    <string name="cost_price_per_unit_aed">Cost Price Per Unit: AED</string>
    <string name="amount_of_benefit">Profit (%):</string>
    <string name="units_available_in_stock">Units Available in Stock:</string>
    <string name="cost_for_storage_and_utilities_aed">Cost for storage and utilities: AED</string>
    <string name="shipping_price_aed">Shipping Price: AED</string>
    <string name="addtostore_info">View the product details by clicking on the \'Product Details\' option or add it to your store for sale by clicking on the \'Add for Sale\' option!\n\n You can set your desired profit or even put up a discount and add it to your store!</string>
    <string name="search">Search</string>
    <string name="add_to_stock">Add to Stock</string>
    <string name="add_to_stock_img">Add to Stock</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5_pieces">5 pieces</string>
    <string name="product_amount">Product Amount</string>

</resources>