<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register"
    android:background="#00CAFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="165dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:layout_height="135dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/lien_logo" />

    <TextView
        android:id="@+id/lienHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/lien"
        android:textColor="#000000"
        android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="vertical">

            <EditText
                android:id="@+id/userProfileName"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_width="260dp"
                android:layout_height="42dp"
                android:autofillHints=""
                android:background="@drawable/round_rect_shape"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/confirmPass"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="260dp"
                android:layout_height="42dp"
                android:background="@drawable/round_rect_shape"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password"
                android:layout_width="260dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/round_rect_shape"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000000" />


            <EditText
                android:id="@+id/userEmail"
                android:layout_width="260dp"
                android:layout_height="42dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/round_rect_shape"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:padding="10dp" />

        </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="@drawable/round_black_rect"
                app:backgroundTint="#000000"
                android:fontFamily="@font/montserrat"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/extraText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingStart="5dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>