<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="450dp"
        android:layout_height="59dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/appColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="181dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dashboard"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageButton
        android:onClick="goToSettings"
        android:id="@+id/settingsButton"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:srcCompat="@drawable/settings_icon"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/store_button"
        android:onClick="goToStore"
        android:layout_width="126dp"
        android:layout_height="187dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        app:srcCompat="@drawable/store"
        tools:srcCompat="@drawable/store"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/profile_header"
        android:layout_width="132dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/store"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.961" />

    <ImageButton
        android:id="@+id/sales_button"
        android:layout_width="126dp"
        android:layout_height="187dp"
        android:background="#00FFFFFF"
        android:onClick="goToReports"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        app:srcCompat="@drawable/report"
        tools:srcCompat="@drawable/report"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/products_header"
        android:layout_width="132dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/products"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.216" />

    <ImageButton
        android:id="@+id/stock_button"
        android:onClick="goToStock"
        android:layout_width="126dp"
        android:layout_height="187dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        app:srcCompat="@drawable/stock"
        tools:srcCompat="@drawable/stock"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/products_button"
        android:onClick="goToProducts"
        android:layout_width="126dp"
        android:layout_height="187dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        app:srcCompat="@drawable/buy_products"
        tools:srcCompat="@drawable/buy_products"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/trans_button"
        android:onClick="goToTransactions"
        android:layout_width="126dp"
        android:layout_height="187dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        app:srcCompat="@drawable/transactions"
        tools:srcCompat="@drawable/transactions"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/trans_header"
        android:layout_width="132dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/transactions"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.216"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/stock_header"
        android:layout_width="132dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/stock"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.602" />

    <TextView
        android:id="@+id/stats_header"
        android:layout_width="132dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/sale_reports"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.602" />


</androidx.constraintlayout.widget.ConstraintLayout>